Added Swagger ui, debugged summary & info endpoints, debugged kie service startup